# yaml2cmake

./: CMakeLists.txt  CONTRIBUTING.md  README.md  TODOs.md  config.yaml  go.mod  main.go
src/: main.cpp
tests/: CMakeLists.txt  example_test.cpp
